# elements

./: .gitattributes  .gitignore  .lfsconfig  :w  Cargo.toml  README.md  build.rs  findword.sh  linecounter.sh  todo.md
client/: Cargo.toml
client/src/: animation_state.rs  app.rs  lib.rs  local.rs  main.rs  prelude.rs  server_connector.rs  window_vec.rs
client/src/app/: event_handler.rs  lobby_menu.rs  mod.rs  online_menu.rs  online_menu_state.rs  runnable.rs
client/src/backend/: audio.rs  graphics.rs  input.rs  mod.rs  storage.rs
client/src/backend/audio/: mod.rs
client/src/backend/input/: mod.rs
client/src/backend/socket/: mod.rs
client/src/backend/tilemap_loader/: mod.rs
client/src/client/: mod.rs
client/src/draw/: camera.rs  color.rs  fluidmap.rs  lobby.rs  mod.rs  player.rs  render.rs  texture.rs  tick_info.rs  vec.rs  world.rs
client/src/draw_context/: mod.rs
client/src/input/: adaptive.rs  mod.rs
client/src/menu/: events.rs  menu_elements.rs  menues.rs  mod.rs
docker/: Dockerfile  build.sh
game_server/: Cargo.toml
game_server/src/: lib.rs  main.rs
game_server_bin/: Cargo.toml
game_server_bin/src/: main.rs
infrastructure/deploy/: deploy.sh  refresh_identity.sh
infrastructure/docker/: Dockerfile
infrastructure/git_hooks/: pre-commit
infrastructure/rocket-server/: Cargo.toml  Rocket.toml  do-it.sh
infrastructure/rocket-server/src/: main.rs
lib/: Cargo.toml
lib/src/: animation.rs  fps_timer.rs  lib.rs  prelude.rs  resource.rs
lib/src/input/: mod.rs
lib/src/net/: mod.rs
lib/src/server/: mod.rs
lib/src/vec/: iuf8.rs  mod.rs
lib/src/world/: mod.rs
lib/src/world/fluidmap/: activity.rs  mod.rs  physics.rs
lib/src/world/player/: input_state.rs  mod.rs
lib/src/world/tilemap/: mod.rs
master_server/: Cargo.toml
master_server/src/: main.rs
native_client/: Cargo.toml  build.rs  compile.sh
native_client/src/: main.rs  prelude.rs  timer.rs  winit_inputs.rs
native_client/src/backend/: audio.rs  input.rs  mod.rs  storage.rs  tilemap_loader.rs
native_client/src/graphics/: context.rs  misc.rs  mod.rs
native_client/src/graphics/render/: render_fluidmap.rs  render_text.rs  render_tilemap.rs  render_triangles.rs  texture_state.rs
native_utils/: Cargo.toml
native_utils/src/: fps_timer.rs  lib.rs  prelude.rs  udp_networking.rs
native_world/: Cargo.toml
native_world/src/: client_socket_native.rs  lib.rs  native_socket_backend.rs  prelude.rs
networking/: Cargo.toml
networking/src/: constants.rs  lib.rs  my_drain_filter.rs  packets.rs  prelude.rs  timed_loop.rs  udp.rs
networking/src/peer/: mod.rs  native.rs  web.rs
networking/src/socket_backend/: mod.rs  native.rs
res/: fluids_fragment.glsl  fluids_vertex.glsl  noise.glsl  noise_fragment.glsl  tilemap_fragment.glsl  vertex.glsl
res/fonts/: license.txt  readme.txt
res/map/: map01.aseprite
res/shader/: fluidmap.frag.glsl  fluidmap.frag.spv  fluidmap.vert.glsl  fluidmap.vert.spv  fluids_fragment.glsl  noise_fragment.glsl  render.frag  render.frag.glsl  render.vert.glsl  shader.frag.glsl  shader.vert.glsl  tilemap.frag.glsl  tilemap.frag.spv  tilemap.vert.glsl  tilemap.vert.spv  tilemap_fragment.glsl  triangles.frag.glsl  triangles.frag.spv  triangles.vert.glsl  triangles.vert.spv
res/web_shader/: fluidmap.frag.glsl.js  fluidmap.vert.glsl.js  tilemap.frag.glsl  tilemap.frag.glsl.js  tilemap.frag_depth.glsl.js  tilemap.vert.glsl  tilemap.vert.glsl.js  triangles.frag.glsl.js  triangles.vert.glsl.js  triangles_depth.frag.glsl.js
rocket-server/: Cargo.toml  compile.sh  do-it.sh  run.sh
rocket-server/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  prelude.rs
server/src/peer/: mod.rs  native.rs  web.rs
src/: animation.rs  app.rs  base.rs  client_world.rs  draw_context.rs  font_state.rs  fps_timer.rs  input.rs  lib.rs  local.rs  main.rs  main_loop.rs  master_server.rs  menu.rs  native_socket_backend.rs  net.rs  peer.rs  prelude.rs  resource.rs  rng.rs  server_connector.rs  shader_state.rs  texture_state.rs  timed_loop.rs  timer.rs  web.rs  window_vec.rs  world.rs
src/animation_state/: animation.rs  mod.rs
src/app/: mod.rs  music.rs  resource.rs  runnable.rs  sound.rs  timed_loop.rs
src/backend/: mod.rs  native.rs
src/client/: mod.rs  resource.rs
src/context/: mod.rs
src/draw/: canvas_vec.rs  color.rs  fluidmap.rs  grid.rs  hud.rs  lobby.rs  mod.rs  player.rs  render.rs  texture.rs  tilemap.rs  vec.rs  world.rs
src/draw_context/: canvas_vec.rs  game_draw_context.rs  mod.rs  shader.rs
src/graphics/: animation_state2.rs  context.rs  draw.rs  draw_fluidmap.rs  draw_tilemap.rs  draw_triangles.rs  misc.rs  mod.rs  render_triangles.rs  surface_vec.rs  texture_state2.rs  world.rs
src/input/: adaptive.rs  device.rs  keyboard.rs  keyboard_state.rs  mod.rs  peripherals_state.rs  peripherals_update.rs
utils/: Cargo.toml
web/: build.sh  serve.sh  setup.sh
web_client/: Cargo.toml  build.sh  compile.sh  serve.sh  setup.sh
web_client/site/: index.html  package-lock.json  package.json
web_client/site/src/: audio.js  gamepad.js  main.js  worker.js
web_client/site/src/render/: misc.js  mod.js
web_client/site/src/render/fluidmap/: render.js
web_client/site/src/render/text/: init.js  render.js
web_client/site/src/render/tilemap/: init.js  render.js
web_client/site/src/render/triangles/: init.js  mod.js  render.js
web_client/src/: js.rs  lib.rs  prelude.rs  render.rs
web_client/src/backend/: audio.rs  graphics.rs  input.rs  mod.rs  socket.rs  storage.rs
world/: Cargo.toml  compile.sh
world/src/: animation.rs  client_socket_native.rs  event.rs  lib.rs  packet.rs  prelude.rs  resource.rs  update.rs
world/src/fluidmap/: activity.rs  force.rs  grab.rs  mod.rs  physics.rs  update.rs
world/src/input/: mod.rs  peripherals_state.rs  peripherals_update.rs
world/src/player/: input_state.rs  mod.rs
world/src/skill/: mod.rs  throw.rs
world/src/skill/wall/: mod.rs
world/src/tilemap/: mod.rs  tilemap_image.rs  tiley.rs  update.rs
world/src/vec/: draw.rs  generic.rs  mod.rs
world/src/vec/custom/: serde.rs
(+156 files in other folders)
