[package]
name = "elements2"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>", "memoryleak47 <memoryleak47@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-client"]
client = []
native-client = ["client", "sfml", "gilrs", "rodio", "lazy_static"]
web-client =    ["client", "wasm-bindgen", "lazy_static"] # TODO remove these obsolete dependencies

[dependencies]
image = "0.23"
itertools = "0.9"
num-traits = "0.2"
rand = "0.7"
rand_xorshift = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

sfml = { version = "0.15", optional = true }
gilrs = { version = "0.7.2", optional = true }
rodio = { version = "0.11", optional = true }
lazy_static = { version = "1.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
