[package]
name = "elements2"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>", "memoryleak47 <memoryleak47@protonmail.ch>", "ichinii <ogtoad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-client"]
server = ["tungstenite"]
client = []
native-client = ["server", "client", "sfml", "gilrs", "rodio", "lazy_static", "wgpu", "winit", "winit_input_helper", "bytemuck"]
web-client =    ["client", "wasm-bindgen", "lazy_static", "console_error_panic_hook", "js-sys", "web-sys"]

[dependencies] # TODO not all of those dependencies are always required!
image = "0.23"
itertools = "0.9"
num-traits = "0.2"
rand = "0.7"
rand_xorshift = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"
futures = "0.3.6"

# *-client
lazy_static = { version = "1.4", optional = true }

# native-client
sfml = { version = "0.15", optional = true }
wgpu = { version = "0.6.0", optional = true }
winit = { version = "0.22.0", optional = true }
winit_input_helper = { version = "0.6.0", optional = true }
gilrs = { version = "0.7.2", optional = true }
rodio = { version = "0.11", optional = true }
bytemuck = { version = "1.4.1", optional = true }

# web-client
wasm-bindgen = { features = ["serde-serialize"], version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "0.3.45", optional = true }
web-sys = { version = "0.3.45", optional = true, features = ["Window", "Performance", "WebSocket", "MessageEvent", "BinaryType"] }

# server
tungstenite = { version = "0.11", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
