[package]
name = "elements"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>", "memoryleak47 <memoryleak47@protonmail.ch>", "ichinii <ogtoad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-client"]
game = []
server_feature = ["tungstenite", "native-tls", "server"]
game-server = ["game", "server_feature", "clap"]
client = ["game", "glyph_brush"]
native-client = ["game-server", "client", "gilrs", "rodio", "wgpu", "winit", "bytemuck", "wgpu_glyph", "once_cell", "futures"]
web-client =    ["client", "wasm-bindgen", "console_error_panic_hook", "js-sys", "web-sys"]

[dependencies] # TODO not all of those dependencies are always required!
image = "0.23"
itertools = "0.9"
num-traits = "0.2"
rand = "0.7"
rand_chacha = "0.2"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

# native-client
once_cell = { version = "1.4.1", optional = true }
wgpu = { version = "0.6.0", optional = true }
winit = { version = "0.22.0", optional = true }
gilrs = { version = "0.7.2", optional = true }
rodio = { version = "0.11", optional = true }
bytemuck = { version = "1.4.1", optional = true }
wgpu_glyph = { version = "0.10.0", optional = true }
glyph_brush = { version = "0.7.0", optional = true }
futures = { version = "0.3.6", optional = true }

# web-client
wasm-bindgen = { features = ["serde-serialize"], version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = { version = "0.3.45", optional = true }
web-sys = { version = "0.3.45", optional = true, features = ["Window", "Performance", "WebSocket", "MessageEvent", "BinaryType"] }

# server
tungstenite = { version = "0.11", optional = true }
native-tls = { version = "0.2.6", optional = true }
clap = { version = "~2.33.3", optional = true }

networking = { path = "networking" }
server = { path = "server", optional = true }
native_utils = { path = "native_utils" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[workspace]
members = ["networking", "server", "master_server", "native_utils"]
