[package]
name = "elements2client"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>", "memoryleak47 <memoryleak47@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements2lib = { path = "../lib" }
sfml = "0.15"
gilrs = "0.7.2"

[profile.release]
debug = true
