[package]
name = "game_server"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native_world = { path = "../native_world" }
server = { path = "../server" }

tungstenite = { version = "0.11" }
native-tls = { version = "0.2.6" }
clap = { version = "~2.33.3" }

