[package]
name = "game_server"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>", "memoryleak47 <memoryleak47@protonmail.ch>", "ichinii <ogtoad@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world = { path = "../world" }

tungstenite = { version = "0.11" }
native-tls = { version = "0.2.6" }
clap = { version = "~2.33.3" }
