[package]
name = "game_server_bin"
version = "0.1.0"
authors = ["memoryleak47 <memoryleak47@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33.3" }

game_server = { path = "../game_server" }
networking = { path = "../networking" } # TODO maybe remove this one
