[package]
name = "master_server"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
networking = { path = "../networking" }
native_utils = { path = "../native_utils" }
