[package]
name = "networking"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

[target.'cfg(not(target_arch  = "wasm32"))'.dependencies]
native-tls = "0.2.6"
tungstenite = "0.11"
