[package]
name = "server"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.11" }
native-tls = { version = "0.2.6" }
networking = { path = "../networking" }
