[package]
name = "web_client"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

[dependencies]
serde = "1.0"
glyph_brush = "0.7.0"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2" }
console_error_panic_hook = { version = "0.1.6" }
js-sys = { version = "0.3.45" }
web-sys = { version = "0.3.45", features = ["Window", "Performance", "WebSocket", "MessageEvent", "BinaryType"] }

game_server = { path = "../game_server" }
networking = { path = "../networking" }

[lib]
crate-type = ["cdylib", "rlib"]
