[package]
name = "world"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
rand = "0.7"
rand_chacha = "0.2"
serde = "1.0"

networking = { path = "../networking" }
