[package]
name = "rocket-server"
version = "0.1.0"
authors = ["Bluemi <bruno.schilling@protonmail.ch>", "memoryleak47 <memoryleak47@protonmail.ch>", "ichinii <ogtoad@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.8", features = ["tls"] }
rocket_contrib = "0.4.8"
serde = { version = "1.0.117", features = ["derive"] }
